--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "jriccardi.com",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://riccjohn.github.io/home",
   "dependencies": {
     "@material-ui/core": "^3.3.0",
     "ajv": "^6.5.4",
@@ -13,7 +14,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -25,6 +28,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint-config-react-app": "^3.0.4"
+    "eslint-config-react-app": "^3.0.4",
+    "gh-pages": "^2.0.1"
   }
 }
