--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ajv": "^6.5.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.5"
+    "react-scripts": "^2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,7 +28,13 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "cz-conventional-changelog": "^2.1.0",
     "eslint-config-react-app": "^3.0.4",
     "gh-pages": "^2.0.1"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
